--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
 
+  #Allows you to easily use any of the 977 fonts
+  google_fonts: ^1.1.2
+  #Allow us to use .svg file
+  flutter_svg: ^0.18.1
+  #Date and number formatting and parsing
+  intl: ^0.16.1
+
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -45,9 +54,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icons/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
